bug(settings,content): Follow up for in brand messaging
Because:
- A couple defects were noticed.
  - `start-0` was always being applied. And we only want this for RTL languages.
  - role="Link" was missing in one spot, so screen readers wouldn't work for Learn more link.
  - In mobile view some pages would overlap the messaging
  - In mobile view the 'X' icon would over overlap the text on some devices
  - Noticed an issue with signup text
  - Branding ftl strings in fxa-shared not coming through

This Commit:
- Adds `rtl:` and `ltr:` prefix to ensure x is on the right side
- switched to using flex to ensure X icon doesn't overlap
- some tricks to ensure banner is fixed and sticky when render at top, and appended / inline rendered at bottom of page in mobile view.
- Moves away from pixel based css for m-logo and uses tailwind styles instead.
- Removes a stray console.log
- Sets timeout to 0 for adding the brand-messaging class. A long timeout is not necessary.
- Default BRAND_MESSAGING_MODE to none, to avoid accidental rollout.
- Fixes bug in grunt file, where latests changes form fxa-shared branding.ftl (or fxa-react *.ftl files) weren't picked up.

--- a/packages/fxa-content-server/app/styles/modules/_branding.scss
+++ b/packages/fxa-content-server/app/styles/modules/_branding.scss
@@ -65,40 +65,10 @@
   }
 }
 
-#banner-brand-message {
-  .brand-banner-bg {
-    background: linear-gradient(88.76deg, #E4EAF6 3.37%, #DBEEF8 39.93%, #DAF3F4 65.09%, #E3F6ED 102.21%);
-  }
-
-  .m-logo {
-    width: 30px;
-    height: 30px;
-    top: 5px;
-    background-color: #000;
-
-    >div:first-child {
-      position: absolute;
-      width: 30px;
-      height: 30px;
-      left: calc(50% - 15px + 0.25px);
-        top: calc(50% - 15px - 0px);
-
-      >img:first-child {
-        position: absolute;
-        width: 27px;
-        height: 16px;
-        left: calc(50% - 13.5px);
-          top: calc(50% - 8px);
-        background: #000;
-      }
-    }
-  }
-
-  @include respond-to('small') {
-    top: initial;
-    bottom: 0;
-  }
+.brand-banner-bg {
+  background: linear-gradient(88.76deg, #E4EAF6 3.37%, #DBEEF8 39.93%, #DAF3F4 65.09%, #E3F6ED 102.21%);
 }
+
 /** Work around for sticky fixed banner */
 body.brand-messaging {
   padding-top: 9rem;
@@ -109,6 +79,7 @@ body.brand-messaging {
   body.brand-messaging {
     padding-top: inherit;
   }
+
 }
 .choose-what-to-sync {
   .success-email-created {
